Migrated css, added comments
I moved all movable/stackable css from the html file to the less file.
Put them into nested less groups.

--- a/client/header.html
+++ b/client/header.html
@@ -4,33 +4,33 @@
 
 <template name="header">
   <div class="header_container">
-  	<div class="header_title u-center-vertically u-pull-left">
+  	<div class="header_title u-pull-left">
   		<h5>Massive Triple-T</h5>
   	</div>
 
-  	<div class="header_navigation  u-center-vertically u-pull-right">
-  		<div class="navigation_extender u-pointer u-noselect u-pull-left">
+  	<div class="header_navigation u-pull-right">
+  		<div class="navigation_extender u-pull-left">
   			<h6>&#60; Open</h6>
   		</div>
 
       <div class="navigation_option_container u-pull-left">
-    		<div class="navigation_home u-pointer u-noselect u-pull-left">
+    		<div class="nav_shortcuts u-pull-left">
     			<h6>ShortCuts</h6>
     		</div>
 
-    		<div class="navigation_divider u-pointer u-noselect u-pull-left">
+    		<div class="navigation_divider u-pull-left">
     			<h6>|</h6>
     		</div>
 
-    		<div class="navigation_menu u-pointer u-noselect u-pull-left">
+    		<div class="navigation_menu u-pull-left">
     			<h6>User</h6>
     		</div>
 
-        <div class="navigation_divider u-pointer u-noselect u-pull-left">
+        <div class="navigation_divider u-pull-left">
           <h6>|</h6>
         </div>
 
-        <div class="navigation_home u-pointer u-noselect u-pull-left">
+        <div class="navigation_home u-pull-left">
           <h6>Settings</h6>
         </div>
       </div>
